It's source_url, not uri.

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       ${source}
     </pre>
     {{else}}
-    <iframe src="${source_uri}" style="width: 95%; height: 70%;" />
+    <iframe src="${source_url}" style="width: 95%; height: 70%;" />
     {{/if}}
   </div>
 </script>
