--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       ${source}
     </pre>
     {{else}}
-    <iframe src="${source_url}" style="width: 95%; height: 70%;" />
+    <pre id="script-source-code"></pre>
     {{/if}}
   </div>
 </script>
