--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
 <script type="text/x-jquery-tmpl" id="template-script">
   <div id="documentation">
-    {{tmpl "#template-file-stats"}}
+    {{tmpl($item) "#template-file-stats"}}
     <h2>${name}</h2>
     {{if source}}
     <pre>
