--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
 <script type="text/x-jquery-tmpl" id="template-script">
   <div id="documentation">
-    {{tmpl($item) "#template-file-stats"}}
+    {{tmpl "#template-file-stats"}}
     <h2>${name}</h2>
     {{if source}}
     <pre>
@@ -210,7 +210,7 @@
       {{/if}}
 
       <!-- TODO: support for scm link -->
-      {{if options.scm_url}}
+      {{if scm_url}}
       <dt class="scm-url">SCM URL</dt>
       <dd class="scm-url">
         <a target="_top" href="${scm_url}">${scm_url}</a>
