--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       {{/if}}
 
       <!-- TODO: support for scm link -->
-      {{if options.scm_url}}
+      {{if scm_url}}
       <dt class="scm-url">SCM URL</dt>
       <dd class="scm-url">
         <a target="_top" href="${scm_url}">${scm_url}</a>
