Finish convertion to handlebars.js.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
   <!-- Provides JQuery framework. -->
   <script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
 
+  <!-- Provides rdoc markup support. -->
+  <script src="assets/javascripts/rundown.js"></script>
+
   <!-- Provides templating system. -->
-  <script src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
+  <script src="assets/javascripts/handlebars.runtime.js"></script>
+  <script src="assets/javascripts/handlebars.templates.js"></script>
+  <script src="assets/javascripts/handlebars.helpers.js"></script>
 
   <!-- Provides history system. -->
   <script src="assets/javascripts/jquery.history.js"></script>
@@ -23,9 +28,6 @@
   <!-- Provides search filtering. -->
   <script src="assets/javascripts/quicksearch.js"></script>
   <link type="text/css" rel="stylesheet" href="assets/stylesheets/quicksearch.css"  media="screen" />
-
-  <!-- Provides rdoc support. -->
-  <script src="assets/javascripts/rundown.js"></script>
 
   <!-- Provides syntax highlighting support. -->
   <script src="http://yandex.st/highlightjs/6.0/highlight.min.js"></script>
